Some z-index fixing and project page styles

--- a/web/app/themes/scb/assets/styles/components/_header.scss
+++ b/web/app/themes/scb/assets/styles/components/_header.scss
@@ -1,12 +1,12 @@
 // Header
 
 .site-header {
-  z-index: 50;
+  z-index: 60;
   position: relative;
   padding: 20px 10px;
   background: $white;
   @include clearfix();
-  transition: padding .35s ease-out;
+  transition: padding .35s ease-out, background .5s ease-out;
 
   @include min-screen($breakpoint-medium) {
     top: 0;
@@ -91,7 +91,7 @@
 body.collection-active .site-header,
 body.modal-active .site-header,
 body.menu-open .site-header {
-  background: transparent;
+  background: rgba(240,240,240,.95);
 }
 
 // Header bars
