--- a/web/app/themes/scb/assets/styles/components/_modal.scss
+++ b/web/app/themes/scb/assets/styles/components/_modal.scss
@@ -2,7 +2,7 @@
 .modal {
   right: 0;
   top: 144px;
-  z-index: 100; 
+  z-index: 50; 
   display: none;
   padding: 40px;
   position: absolute;
