--- a/web/app/themes/scb/assets/styles/pages/_projects.scss
+++ b/web/app/themes/scb/assets/styles/pages/_projects.scss
@@ -418,7 +418,7 @@
     -webkit-font-smoothing: auto;
     .stat-number {
       margin: 0;
-      font-size: 50px;
+      font-size: 52px;
       pointer-events: none;
       letter-spacing: -.1em;
       @include min-screen($breakpoint-medium) {
@@ -450,6 +450,15 @@
         color: $brand-primary;
         &::after {
           background: $brand-primary;
+        }
+      }
+    }
+
+    @include screen($breakpoint-medium, $breakpoint-large - 1) {
+      &:not(.stat-secondary) {
+        .wrap {
+          height: auto;
+          padding-bottom: 0;
         }
       }
     }
@@ -568,6 +577,7 @@ body.tax-project_category.interior-design {
 .load-more {
   clear: both;
   margin: 30px 0;
+  padding: 0 20px;
 
   a {
     color: $black;
@@ -585,7 +595,7 @@ body.tax-project_category.interior-design {
   }
 
   @include min-screen($breakpoint-medium) {
-    padding-left: 10px;
+    padding: 0 10px;
     margin: 90px 0 120px;
   }
 }
